# EviMem

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  review.md
annotation/: label_studio_config.xml  scimem_update_pilot_unlabeled.jsonl
configs/: datasets.json  jarvis_mp_certified_state_v2.json  jarvis_mp_environment_hull_v4.json  jarvis_mp_environment_task_v4.json  jarvis_mp_protocol_activation_v1.json  wbm_calibration.json
data_manifests/: scimem_update_pilot_manifest.json
docs/: ACTIVE_WITNESS_REVIEW_TRACEABILITY.md  AKSC_CEILING_DIAGNOSTIC_2026-07-20.md  ARCHITECTURE.md  CAMPAIGN_GATED_IC_SARR.md  CAMPAIGN_LEVEL_CONSTRAINED_ROLLOUT.md  CANONICAL_EXPERIMENT_PLAN.md  DECISION_SUFFICIENT_SCIENTIFIC_STATE.md  DUAL_HORIZON_ATTRIBUTION.md  DUAL_HORIZON_SARR.md  ENVIRONMENT_HULL_CERTIFICATE_2026-07-20.md  EXPERIMENT_LEDGER.md  IC_SARR_FIVE_FOLD_RESULTS.md  IC_SARR_NUMERICAL_GATE_PLAN.md  IMPLEMENTATION_STATUS.md  JARVIS_MP_MULTIFIDELITY_PREREGISTRATION.md  MATMEM_DESIGN.md  MATPES_CONFIRMATORY_INFRASTRUCTURE.md  METHODS.md  P3C_FAILURE_ATTRIBUTION_2026-07-20.md  RESEARCH_ITERATION_HISTORY.md  RETENTION_SOLVER_CONSISTENCY_AUDIT.md  SCIMEM_UPDATE_ANNOTATION_GUIDELINES.md  SCIMEM_UPDATE_LABELBOOK.md  TRAINING.md  WBM_CALIBRATION_CORESET_AMENDMENT.md  WBM_DATA_LICENSE_AND_INFRASTRUCTURE_AUDIT.md  WBM_ENGINEERING_P1_P15_AND_PILOT.md  WBM_EXECUTION_FEASIBILITY_TABLE.md  WBM_LONG_ARCHIVE_COMPUTE_GATE_2026-07-20.md  WBM_P0_EXECUTION_AUDIT.md  WBM_WORKING_SET_ECONOMICS_PREREGISTRATION.md
tests/: __init__.py  evimem_helpers.py  test_ai_adjudication.py  test_all_outcome_sufficient_state.py  test_all_outcome_target_correction.py  test_blind_adjudication_gate.py  test_calibration_coreset.py  test_campaign_gate.py  test_chic.py  test_chic_training_subset.py  test_composition_aware_transport.py  test_deepseek_adjudication.py  test_dual_horizon_attribution.py  test_environment_transport.py  test_evidence_release.py  test_evimem_benchmark.py  test_evimem_controller.py  test_evimem_human_review.py  test_evimem_memory.py  test_evimem_reward_replay.py  test_evimem_runtime.py  test_evimem_tools.py  test_jarvis_mp_environment_hull.py  test_jarvis_mp_multifidelity_task.py  test_jarvis_mp_oracle_split.py  test_jarvis_mp_protocol_activation_pilot.py  test_matmem.py  test_matmem_active.py  test_matmem_boundary.py  test_matmem_exact_dp.py  test_matpes_confirmatory_summary.py  test_matpes_confirmatory_task.py  test_matpes_protocol_pair_audit.py  test_matpes_protocol_task.py  test_matpes_source_rollout_crossfit.py  test_matpes_source_rollout_numerical_audit.py  test_matpes_source_rollout_opportunity_summary.py  test_phase0_components.py  test_phase1a_data_audit.py  test_phase1b_candidates.py  (+27 more)
tools/: analyze_jarvis_mp_protocol_shift.py  analyze_wbm_compute_relevance.py  analyze_wbm_fixed_gp_dispersion.py  analyze_wbm_model_ceiling.py  analyze_wbm_p3c_p1.py  audit_lemat_protocol_pairs.py  audit_matpes_fixed_hull_parity.py  audit_matpes_protocol_pairs.py  audit_matpes_sobol_seed_stability.py  audit_matpes_source_rollout_opportunity.py  audit_wbm_official_artifacts.py  audit_wbm_p1_p15.py  augment_matpes_structure_embeddings.py  build_jarvis_mp_multifidelity_task.py  build_matpes_confirmatory_task.py  build_matpes_protocol_task.py  build_matpes_source_rollout_crossfit.py  build_wbm_calibration_manifest.py  build_wbm_candidate_parity_audit.py  build_wbm_cleaned_id_manifest.py  build_wbm_compute_gate_manifest.py  build_wbm_frozen_grid_manifest.py  (+32 more)
(+191 files in other folders)
