[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evimem-rl"
version = "0.1.0"
description = "Evidence-warranted memory and constrained sequential control for scientific curation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.1",
  "pyarrow>=14",
  "pydantic>=2.5",
  "sqlalchemy>=2,<3",
  "structlog>=23.2",
]

[project.optional-dependencies]
semantic = ["scikit-learn>=1.3"]
train = [
  "accelerate>=1.10,<2",
  "datasets>=4,<6",
  "peft>=0.19,<1",
  "transformers>=5,<6",
  "trl>=1.8,<2",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]

[project.scripts]
evimem-train = "evimem.training.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"evimem.domains" = ["configs/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = ["E501"]
