[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evimem"
version = "0.2.0"
description = "Governed scientific memory and protocol-aware residual memory for materials discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.1",
  "pyarrow>=14",
  "pydantic>=2.5",
  "sqlalchemy>=2,<3",
  "structlog>=23.2",
]

[project.optional-dependencies]
semantic = [
  "rank-bm25>=0.2.2,<1",
  "scikit-learn>=1.3",
  "sentence-transformers>=3,<6",
]
train = [
  "accelerate>=1.10,<2",
  "datasets>=4,<6",
  "peft>=0.19,<1",
  "transformers>=5,<6",
  "sentence-transformers>=3,<6",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]
adjudication = [
  "requests>=2.31,<3",
]
materials = [
  "numpy>=2",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "pymatgen>=2025",
  "dscribe>=2.1",
]

[project.scripts]
evimem-data = "evimem.training.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"evimem.domains" = ["configs/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["quarantine"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = ["E501"]
