[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matmem"
version = "0.2.0"
description = "Decision-aware calibration coresets and protocol-aware residual memory for materials discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.1",
  "pyarrow>=14",
  "pydantic>=2.5",
  "sqlalchemy>=2,<3",
  "structlog>=23.2",
  "numpy>=2",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "pymatgen>=2025",
  "dscribe>=2.1",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = ["E501"]
